--- a/styles/toe.scss
+++ b/styles/toe.scss
@@ -11,4 +11,22 @@
 
 #myCanvas {
    display: inline;
+   background-color: rgba(255,255,255,0.4);
+   margin-top: 50px;
+}
+body{ 
+	background-image: url(background.jpg);
+}
+#title-container{
+	border: 10px solid white ;
+	text-align:center;
+	padding: 0.5em;
+	float:none;
+	margin:auto;
+	// margin:50px;
+	width: 35%;
+}
+#title-box{
+	text-align:center;
+
 }
